# LearnOpenMP

./: .gitignore  CMakeLists.txt
src/: hello_world.cpp  linked.cpp  linked_task.cpp  mandelbrot.cpp  pi.cpp  prod_cons.cpp  prod_cons_flush.cpp
src/random_pi/: random.cpp
